azure/repind-repind.old/msv/cf/manage-doctor/kubernetes/acp/replica-extra-options.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manage-doctor
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
    type: RollingUpdate
  template:
    spec:
      imagePullSecrets:
        - name: cdm-vlb-cae-harbor-pull
